[gd_scene load_steps=5 format=3 uid="uid://cehvi3v7rr7og"]

[ext_resource type="Script" path="res://Scripts/protolevel.gd" id="1_uomms"]
[ext_resource type="Texture2D" uid="uid://bce5jxqqt65qy" path="res://Assets/Interior/Цветное/Group 79.png" id="2_oueo2"]
[ext_resource type="Texture2D" uid="uid://b1sld075u75yb" path="res://Assets/Interior/Цветное/Group 63.png" id="3_rj0wc"]
[ext_resource type="Texture2D" uid="uid://cr5ta4tsj5a8r" path="res://Assets/Interior/Цветное/Group 47.png" id="4_16ypn"]

[node name="Protolevel" type="Node2D"]
position = Vector2(-50, 36)
scale = Vector2(0.8, 0.8)
script = ExtResource("1_uomms")

[node name="White_Floor" type="Sprite2D" parent="."]
position = Vector2(716.313, 627.565)
scale = Vector2(0.700475, 0.700475)
texture = ExtResource("2_oueo2")

[node name="Carpet_Floor" type="Sprite2D" parent="."]
position = Vector2(717.575, 626.917)
scale = Vector2(0.706259, 0.706259)
texture = ExtResource("3_rj0wc")

[node name="Oak_Floor" type="Sprite2D" parent="."]
position = Vector2(717.514, 625.625)
scale = Vector2(0.71375, 0.71375)
texture = ExtResource("4_16ypn")

[node name="Cell2A" type="Area2D" parent="."]
position = Vector2(895, 438.75)

[node name="Cell4A" type="Area2D" parent="."]
position = Vector2(1252.5, 618.75)

[node name="Cell3A" type="Area2D" parent="."]
position = Vector2(1073.75, 528.75)

[node name="Cell1A" type="Area2D" parent="."]
position = Vector2(715, 350)

[node name="Cell1B" type="Area2D" parent="."]
position = Vector2(536.25, 438.75)

[node name="Cell2B" type="Area2D" parent="."]
position = Vector2(715, 528.75)

[node name="Cell3B" type="Area2D" parent="."]
position = Vector2(895, 618.75)

[node name="Cell4B" type="Area2D" parent="."]
position = Vector2(1073.75, 707.5)

[node name="Cell1C" type="Area2D" parent="."]
position = Vector2(356.25, 528.75)

[node name="Cell2C" type="Area2D" parent="."]
position = Vector2(536.25, 618.75)

[node name="Cell3C" type="Area2D" parent="."]
position = Vector2(715, 707.5)

[node name="Cell4C" type="Area2D" parent="."]
position = Vector2(895, 797.5)

[node name="Cell1D" type="Area2D" parent="."]
position = Vector2(177.5, 618.75)

[node name="Cell2D" type="Area2D" parent="."]
position = Vector2(356.25, 707.5)

[node name="Cell3D" type="Area2D" parent="."]
position = Vector2(536.25, 797.5)

[node name="Cell4D" type="Area2D" parent="."]
position = Vector2(715, 887.5)
